[gd_scene load_steps=12 format=3 uid="uid://dwrsorst7xcde"]

[ext_resource type="Script" path="res://Scenes/CustomRoll/Scripts/custom_roll_list_item.gd" id="1_afc7a"]
[ext_resource type="PackedScene" uid="uid://btj8iwsaoid87" path="res://Scenes/Common/Buttons/settings_managed_texture_button.tscn" id="1_ijapc"]
[ext_resource type="Texture2D" uid="uid://caj222uwxllqe" path="res://Icons/up-arrow.svg" id="2_yceqa"]
[ext_resource type="Texture2D" uid="uid://bb1rdbn37n0gc" path="res://Icons/down-arrow.svg" id="3_0t5vq"]
[ext_resource type="PackedScene" uid="uid://4y6g5enookh6" path="res://Scenes/Common/Labels/settings_managed_richtextlabel.tscn" id="5_05cnf"]
[ext_resource type="PackedScene" uid="uid://dy7ly2u0s0axc" path="res://Scenes/Common/DiceViews/settings_managed_dice_image.tscn" id="5_stngl"]
[ext_resource type="Shader" uid="uid://crebs61161mid" path="res://Resources/Shader/dice_tint_shader_script.tres" id="6_kqmv0"]
[ext_resource type="PackedScene" uid="uid://d3er8nhufefsi" path="res://Scenes/Common/Buttons/num_dice_up_down_buttons.tscn" id="7_81xqu"]
[ext_resource type="PackedScene" uid="uid://cdqd62tcyenpp" path="res://Scenes/Common/Buttons/property_button.tscn" id="7_g0s4d"]
[ext_resource type="PackedScene" uid="uid://xw1h45p7sb8o" path="res://Scenes/Common/Buttons/modifier_up_down_buttons.tscn" id="8_3o5fp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fwcsu"]
resource_local_to_scene = true
shader = ExtResource("6_kqmv0")
shader_parameter/TintColor = Color(1, 1, 1, 0)

[node name="CustomRollListItem" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 154.0
grow_horizontal = 2
script = ExtResource("1_afc7a")

[node name="UpDownButtonsLayout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UpButton" parent="UpDownButtonsLayout" instance=ExtResource("1_ijapc")]
layout_mode = 2
texture_2d = ExtResource("2_yceqa")

[node name="DeleteButton" parent="UpDownButtonsLayout" instance=ExtResource("1_ijapc")]
layout_mode = 2

[node name="DownButton" parent="UpDownButtonsLayout" instance=ExtResource("1_ijapc")]
layout_mode = 2
texture_2d = ExtResource("3_0t5vq")

[node name="DieViewLayout" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="DiceImage" parent="DieViewLayout" instance=ExtResource("5_stngl")]
material = SubResource("ShaderMaterial_fwcsu")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
use_setting_size = false

[node name="DiceName" parent="DieViewLayout" instance=ExtResource("5_05cnf")]
layout_mode = 2
size_flags_vertical = 8

[node name="PropertiesLayout" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NumDiceUpDownButtons" parent="PropertiesLayout" instance=ExtResource("7_81xqu")]
layout_mode = 2

[node name="ModifierUpDownButtons" parent="PropertiesLayout" instance=ExtResource("8_3o5fp")]
layout_mode = 2

[node name="PropertyButton" parent="PropertiesLayout" instance=ExtResource("7_g0s4d")]
layout_mode = 2

[connection signal="value_changed" from="PropertiesLayout/NumDiceUpDownButtons" to="." method="_on_num_dice_up_down_value_changed"]
[connection signal="value_changed" from="PropertiesLayout/ModifierUpDownButtons" to="." method="_on_modifier_up_down_value_changed"]
[connection signal="properties_updated" from="PropertiesLayout/PropertyButton" to="." method="_on_property_button_properties_updated"]
[connection signal="reset_properties" from="PropertiesLayout/PropertyButton" to="." method="_on_property_button_reset_properties"]
